# cpu-optimizations-lab

./: .continuerc.json  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md
.agents/agents/: README.md
.agents/agents/lab-author/: agent.md
.agents/agents/perf-diagnoser/: prompt.md
.agents/rules/: branch_prediction.md  cache_hierarchy.md  fe_performance_analysis.md  memory_hierarchy_latency_hiding.md  optimize_ipc_ilp.md  rob_and_ooo_executions.md  simd_and_vectorization.md  tlb_and_address_translation.md
.agents/skills/lab-author/: skill.md
.agents/skills/mcp-kb-editor/: agent.md  skill.md
.agents/skills/perf-diagnoser/: agent.md
.agents/skills/simd-reviewer/: agent.md  skill.md
.claude/agents/: simd-reviewer.md
.codex/agents/: lab-author.toml  mcp-kb-editor.toml  perf-diagnoser.toml  simd-reviewer.toml
.cursor/rules/: lab-author.mdc  mcp-kb-editor.mdc  perf-diagnoser.mdc  simd-reviewer.mdc
.gemini/agents/: mcp-kb-editor.md  perf-diagnoser.md
.github/: copilot-instructions.md
.github/agents/: lab-author.md
mcp-server/: .env.example  EXAMPLES.md  FACTORY_PATTERN.md  README.md  knowledge_base.py  package-lock.json  package.json  server.py
mcp-server/src/: index.ts
mcp-server/src/data/: knowledgeBase.ts
mcp-server/src/providers/: EmbeddingsRetrievalProvider.ts  FullRAGProvider.ts  IRetrievalProvider.ts  RetrievalProviderFactory.ts  SimpleRetrievalProvider.ts
src/branch_benchmark/: CMakeLists.txt  bench_harness.h  common.h  main_branchless.cpp  main_naive.cpp  main_sorted.cpp  main_ternary.cpp  ternary.h
src/branch_prediction/branch-prediction-bench/: CMakeLists.txt  README.md  bench_harness.cpp  branch_benchmark.cpp  branchless.cpp  branchless.h  main.cpp  main_naive.cpp  main_sorted.cpp  main_ternary.cpp  naive.cpp  naive.h  sorted.cpp  sorted.h  ternary.cpp
